# tinyLog

./: CMakeLists.txt  README.md
include/tinyLog/: Asserts.h  Log.h
src/: Log.cpp  ccprintf.h
